<?xml version="1.0" encoding="utf-8"?>
<!--
     SPDX-License-Identifier: Apache-2.0
-->
<PreferenceScreen xmlns:android="http://schemas.android.com/apk/res/android"
    android:title="@string/ai_key_settings_title">

    <PreferenceCategory
        android:key="ai_key_category"
        android:title="@string/ai_key_title">

        <ListPreference
            android:key="ai_key_action"
            android:title="@string/ai_key_action_title"
            android:summary="@string/ai_key_action_summary"
            android:dialogTitle="@string/ai_key_action_title"
            android:entries="@array/ai_key_action_entries"
            android:entryValues="@array/ai_key_action_values" />

        <Preference
            android:key="ai_key_custom_app"
            android:title="@string/ai_key_custom_app_title"
            android:summary="@string/ai_key_custom_app_summary" />

    </PreferenceCategory>
</PreferenceScreen>
